database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: database
  name: database
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: database
    spec:
      volumes: 
      - name: database-pv 
        persistentVolumeClaim: 
          claimName: database-pv
      containers:
      - image: postgres
        imagePullPolicy: Always
        volumeMounts: 
        - mountPath: /var/lib/postgresql/data
          name: database-pv
        name: database
        resources: 
          limits:
            memory: 64Mi
            cpu: "20m"
          requests:
            memory: 32Mi
            cpu: "10m"
      dnsPolicy: ClusterFirst
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: database
  name: database
  namespace: default  
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: database
