redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: redis
  name: redis
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - image: redis
        imagePullPolicy: Always
        volumeMounts: 
        - name: redis-conf
          mountPath: "/conf"
          readOnly: false
        - name: redis-data
          mountPath: "/data"
          readOnly: false
        name: redis
        resources: 
          limits:
            memory: 64Mi
            cpu: "20m"
          requests:
            memory: 32Mi
            cpu: "10m"
      dnsPolicy: ClusterFirst
      volumes: 
      - name: redis-conf
      - name: redis-data
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis
  ports:
    - name: client
      port: 6379
      targetPort: 6379
    - name: gossip
      port: 16379
      targetPort: 16379
